libs/extractor/src/snapshots/extractor__tailwind__tests__parse_tailwind_to_styles_basic.snap
---
source: libs/extractor/src/tailwind.rs
expression: sort_styles(styles)
---
{
    Static(
        ExtractStaticStyle {
            property: "background-color",
            value: "oklch(63.7% .237 25.331)",
            level: 0,
            selector: None,
            style_order: None,
            layer: None,
        },
    ),
    Static(
        ExtractStaticStyle {
            property: "display",
            value: "flex",
            level: 0,
            selector: None,
            style_order: None,
            layer: None,
        },
    ),
    Static(
        ExtractStaticStyle {
            property: "padding",
            value: "1rem",
            level: 0,
            selector: None,
            style_order: None,
            layer: None,
        },
    ),
}
