libs/extractor/src/snapshots/extractor__tailwind__tests__parse_tailwind_to_styles_responsive.snap
---
source: libs/extractor/src/tailwind.rs
expression: sort_styles(styles)
---
{
    Static(
        ExtractStaticStyle {
            property: "background-color",
            value: "oklch(62.3% .214 259.815)",
            level: 1,
            selector: None,
            style_order: None,
            layer: None,
        },
    ),
    Static(
        ExtractStaticStyle {
            property: "display",
            value: "flex",
            level: 3,
            selector: None,
            style_order: None,
            layer: None,
        },
    ),
    Static(
        ExtractStaticStyle {
            property: "padding",
            value: "2rem",
            level: 2,
            selector: None,
            style_order: None,
            layer: None,
        },
    ),
}
