libs/extractor/src/snapshots/extractor__tailwind__tests__parse_tailwind_to_styles_variants.snap
---
source: libs/extractor/src/tailwind.rs
expression: sort_styles(styles)
---
{
    Static(
        ExtractStaticStyle {
            property: "background-color",
            value: "#3B82F6",
            level: 0,
            selector: Some(
                At {
                    kind: Media,
                    query: "(hover:hover)",
                    selector: Some(
                        "&:hover",
                    ),
                    outer: [],
                    file: None,
                },
            ),
            style_order: None,
            layer: None,
        },
    ),
    Static(
        ExtractStaticStyle {
            property: "color",
            value: "#FFF",
            level: 0,
            selector: Some(
                Selector(
                    ":root[data-theme=dark] &",
                ),
            ),
            style_order: None,
            layer: None,
        },
    ),
    Static(
        ExtractStaticStyle {
            property: "outline",
            value: "2px solid transparent",
            level: 0,
            selector: Some(
                Selector(
                    "&:focus",
                ),
            ),
            style_order: None,
            layer: None,
        },
    ),
}
